recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:12: error: not found: value drote
	drote(120)
        ^